feature/add apikey checker to check requests
Add decorator that will search requests that are sent to views in order to find `q` field, which should contain api key

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,15 @@ PluginProcessor.*
 
 # vs
 .vs/
+
+# design
+design.png
+
+# enviroment variables for juce
+BeatUploader/Source/env.*
+
+# API
+API/venv/
+API/API/.env
+
+**/__pycache__/**
